# HolyDiceGame

./: .npmrc  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/: .ic-assets.json5
src/game_room_backend/: Cargo.toml  game_room_backend.did  ws_types.did
src/game_room_backend/src/: canister.rs  lib.rs
src/game_room_frontend/: .npmrc  index.html  package.json  vite.config.js
src/game_room_frontend/public/: index.html
src/game_room_frontend/src/: App.jsx  main.jsx
src/game_room_frontend/src/components/: Footer.jsx  Header.css  Header.jsx
src/game_room_frontend/src/components/Dice/: D20Dice.jsx
src/game_room_frontend/src/pages/: Home.jsx
src/game_room_frontend/src/pages/auth/: Authentication.jsx  LoggedIn.jsx  LoggedOut.jsx  useAuthClient.jsx
src/game_room_frontend/src/pages/create_character/: CreateCharacter.jsx
src/game_room_frontend/src/pages/create_game/: CreateGame.jsx
src/game_room_frontend/src/pages/game_room/: GameRoom.jsx
src/game_room_frontend/src/pages/join_game/: JoinGame.jsx
src/game_room_frontend/src/pages/my_characters/: MyCharacter.jsx
src/game_room_frontend/src/pages/nft/: NftMint.jsx
src/game_room_frontend/src/pages/style/: auth.css  create_character.css  game_room.css  home.css  join_game.css  mycharacter.css  nft.css  profile.css  waiting_room.css
src/game_room_frontend/src/pages/user_profile/: UserProfile.jsx
src/game_room_frontend/src/pages/waiting_room/: WaitingRoom.jsx
src/game_room_frontend/src/pages/wallet/: Wallet.jsx
(+5 files in other folders)
